--- a/MeetManagerPrism/Views/Admin/AdminUsersPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminUsersPage.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="MeetManagerPrism.Views.Admin.AdminPage"
+    x:Class="MeetManagerPrism.Views.Admin.AdminUsersPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin"
@@ -9,7 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodel="clr-namespace:MeetManagerPrism.ViewModels"
-    d:DataContext="{d:DesignInstance Type=admin:AdminViewModel}"
+    d:DataContext="{d:DesignInstance Type=admin:AdminUsersViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
