--- a/MeetManagerPrism/Views/Admin/AdminEventTypesPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminEventTypesPage.xaml
@@ -1,20 +1,14 @@
 ﻿<UserControl
-    x:Class="MeetManagerPrism.Views.Admin.AdminUsersPage"
+    x:Class="MeetManagerPrism.Views.Admin.AdminEventTypesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin"
-    xmlns:converters="clr-namespace:MeetManagerPrism.Common.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.Views.Admin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    xmlns:viewmodel="clr-namespace:MeetManagerPrism.ViewModels"
-    d:DataContext="{d:DesignInstance Type=admin:AdminUsersViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
-    FontSize="30"
-    Foreground="#FFD340"
     mc:Ignorable="d">
 
 
@@ -105,4 +99,6 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
+
+
 </UserControl>
