--- a/MeetManagerPrism/Views/Admin/AdminMainPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminMainPage.xaml
@@ -22,12 +22,12 @@
 
 
 
-        <StackPanel HorizontalAlignment="Center">
+        <StackPanel Margin="0,50,0,0" HorizontalAlignment="Center">
 
             <Button
                 Width="150"
                 Height="60"
-                Margin="0,30,0,10"
+                Margin="0,10"
                 Command="{Binding NavAdminUsersCommand}"
                 Content="Users" />
 
@@ -35,14 +35,14 @@
                 Width="150"
                 Height="60"
                 Margin="0,10"
-                Command=""
+                Command="{Binding NavAdminRoomsCommand}"
                 Content="Místnosti" />
 
             <Button
                 Width="150"
                 Height="60"
                 Margin="0,10"
-                Command=""
+                Command="{Binding NavAdminEventTypesCommand}"
                 Content="Event Types" />
 
 
