--- a/MeetManagerPrism/Views/Admin/AdminRoomsPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminRoomsPage.xaml
@@ -1,20 +1,16 @@
 ﻿<UserControl
-    x:Class="MeetManagerPrism.Views.Admin.AdminUsersPage"
+    x:Class="MeetManagerPrism.Views.Admin.AdminRoomsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin"
-    xmlns:converters="clr-namespace:MeetManagerPrism.Common.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.Views.Admin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    xmlns:viewmodel="clr-namespace:MeetManagerPrism.ViewModels"
-    d:DataContext="{d:DesignInstance Type=admin:AdminUsersViewModel}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DataContext="{d:DesignInstance Type=admin:AdminRoomsViewModel}"
+    d:DesignHeight="700"
+    d:DesignWidth="1280"
     prism:ViewModelLocator.AutoWireViewModel="True"
-    FontSize="30"
-    Foreground="#FFD340"
     mc:Ignorable="d">
 
 
@@ -36,7 +32,7 @@
             Padding="10,5"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
-            Command="{Binding SaveCommand}"
+            Command="{Binding SaveChangesCommand}"
             Content="Uložit změny"
             FontSize="25"
             Foreground="#161616" />
@@ -61,42 +57,34 @@
             CanUserAddRows="false"
             FontSize="17"
             Foreground="#FFD340"
-            ItemsSource="{Binding Users, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            ItemsSource="{Binding RoomList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectionMode="Single"
             SelectionUnit="Cell">
             <DataGrid.Columns>
                 <DataGridTextColumn
                     MinWidth="70"
-                    Binding="{Binding Id}"
+                    Binding="{Binding ID}"
                     Header="Id"
                     IsReadOnly="True" />
                 <DataGridTextColumn
                     MinWidth="150"
                     Binding="{Binding Name}"
-                    Header="UserName" />
+                    Header="Název" />
                 <DataGridTextColumn
                     MinWidth="150"
-                    Binding="{Binding Email}"
-                    Header="Email" />
+                    Binding="{Binding Location}"
+                    Header="Místo" />
+                <DataGridTextColumn
+                    MinWidth="150"
+                    Binding="{Binding Capacity}"
+                    Header="Kapacita" />
 
-
-                <DataGridTemplateColumn Header="Role">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox
-                                DisplayMemberPath="RoleName"
-                                ItemsSource="{Binding DataContext.RolesList, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                SelectedValue="{Binding RoleId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                SelectedValuePath="Id" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
 
                 <DataGridTemplateColumn MinWidth="80" Header="Akce">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button
-                                Command="{Binding DataContext.RemoveUserCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                Command="{Binding DataContext.RemoveRoomCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                 CommandParameter="{Binding}"
                                 Content="Smazat" />
                         </DataTemplate>
@@ -105,4 +93,7 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
+
+
+
 </UserControl>
