--- a/MeetManagerPrism/Views/Manager/ManagerPage.xaml
+++ b/MeetManagerPrism/Views/Manager/ManagerPage.xaml
@@ -9,8 +9,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     d:DataContext="{d:DesignInstance Type=manager:ManagerMainViewModel}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="700"
+    d:DesignWidth="1280"
     prism:ViewModelLocator.AutoWireViewModel="True"
     FontSize="30"
     Foreground="#FFD340"
@@ -25,12 +25,12 @@
 
 
 
-        <StackPanel HorizontalAlignment="Center">
+        <StackPanel Margin="0, 50"  HorizontalAlignment="Center">
 
             <Button
                 Width="150"
                 Height="60"
-                Margin="0,30,0,10"
+                Margin="0,10"
                 Command="{Binding NavCreateEventCommand}"
                 Content="Vytvořit" />
             <Button
