--- a/MeetManagerPrism/Views/Admin/AdminMainPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminMainPage.xaml
@@ -29,21 +29,63 @@
                 Height="60"
                 Margin="0,10"
                 Command="{Binding NavAdminUsersCommand}"
-                Content="Users" />
+                Content="Users"
+                FontSize="20">
+                <Button.Style>
+                    <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentPage}" Value="Users">
+                                <Setter Property="Background" Value="#008CDB" />
+                                <Setter Property="Foreground" Value="#FFBC24" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+
+
+
+
 
             <Button
                 Width="150"
                 Height="60"
                 Margin="0,10"
                 Command="{Binding NavAdminRoomsCommand}"
-                Content="Místnosti" />
+                Content="Místnosti"
+                FontSize="20">
+
+                <Button.Style>
+                    <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentPage}" Value="Rooms">
+                                <Setter Property="Background" Value="#008CDB" />
+                                <Setter Property="Foreground" Value="#FFBC24" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
 
             <Button
                 Width="150"
                 Height="60"
                 Margin="0,10"
                 Command="{Binding NavAdminEventTypesCommand}"
-                Content="Event Types" />
+                Content="Event Types"
+                FontSize="20">
+                <Button.Style>
+                    <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentPage}" Value="EventTypes">
+                                <Setter Property="Background" Value="#008CDB" />
+                                <Setter Property="Foreground" Value="#FFBC24" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+            </Button>
 
 
         </StackPanel>
