--- a/MeetManagerPrism/Views/Manager/ManagerPage.xaml
+++ b/MeetManagerPrism/Views/Manager/ManagerPage.xaml
@@ -25,21 +25,46 @@
 
 
 
-        <StackPanel Margin="0, 50"  HorizontalAlignment="Center">
+        <StackPanel Margin="0,50" HorizontalAlignment="Center">
+
+            <Button
+                Width="150"
+                Height="60"
+                Margin="0,10"
+                Command="{Binding NavSeznamCommand}"
+                Content="Seznam"
+                FontSize="20">
+
+                <Button.Style>
+                    <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentPage}" Value="Events">
+                                <Setter Property="Background" Value="#008CDB" />
+                                <Setter Property="Foreground" Value="#FFBC24" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
 
             <Button
                 Width="150"
                 Height="60"
                 Margin="0,10"
                 Command="{Binding NavCreateEventCommand}"
-                Content="Vytvořit" />
-            <Button
-                Width="150"
-                Height="60"
-                Margin="0,10"
-                Command="{Binding NavSeznamCommand}"
-                Content="Seznam" />
-
+                Content="Vytvořit"
+                FontSize="20">
+                <Button.Style>
+                    <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentPage}" Value="CreateEvent">
+                                <Setter Property="Background" Value="#008CDB" />
+                                <Setter Property="Foreground" Value="#FFBC24" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
 
         </StackPanel>
 
