--- a/MeetManagerPrism/Views/Admin/AdminUsersPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminUsersPage.xaml
@@ -10,10 +10,10 @@
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodel="clr-namespace:MeetManagerPrism.ViewModels"
     d:DataContext="{d:DesignInstance Type=admin:AdminUsersViewModel}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="700"
+    d:DesignWidth="1280"
     prism:ViewModelLocator.AutoWireViewModel="True"
-    FontSize="30"
+    FontSize="20"
     Foreground="#FFD340"
     mc:Ignorable="d">
 
@@ -24,31 +24,128 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="75*" />
+            <ColumnDefinition Width="70*" />
             <ColumnDefinition Width="25*" />
+            <ColumnDefinition Width="5*" />
         </Grid.ColumnDefinitions>
 
-        <Button
+        <Grid
             Grid.Row="1"
             Grid.Column="1"
-            Height="50"
-            Margin="0"
-            Padding="10,5"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Command="{Binding SaveCommand}"
-            Content="Uložit změny"
-            FontSize="25"
-            Foreground="#161616" />
-        <StackPanel>
+            Margin="0,5,0,-5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Grid
+                Grid.Row="1"
+                Margin="0 35"
+                VerticalAlignment="Bottom">
+                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="35*" />
+                    <ColumnDefinition Width="65*" />
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition MinHeight="50" />
+                    <RowDefinition MinHeight="50" />
+                    <RowDefinition MinHeight="50" />
+                    <RowDefinition MinHeight="50" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
 
 
-            <TextBlock
-                FontSize="20"
-                Foreground="Red"
-                Text="{Binding ErrorMessage}"
-                TextAlignment="Center" />
-        </StackPanel>
+                <TextBlock
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    FontSize="35"
+                    Foreground="#FFBC24"
+                    Text="Nový Uživatel" />
+
+                <TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    Text="{Binding NewUser.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    Text="{Binding NewUser.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    VerticalAlignment="Bottom"
+                    Text="{Binding NewUser.PasswordHash, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+                <ComboBox
+                    Grid.Row="4"
+                    Grid.Column="1"
+                    DisplayMemberPath="RoleName"
+                    ItemsSource="{Binding RolesList}"
+                    SelectedItem="{Binding NewUser.Role}" />
+
+
+                <Label
+                    Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Content="Jméno:" />
+                <Label
+                    Grid.Row="2"
+                    VerticalAlignment="Center"
+                    Content="Email:" />
+                <Label
+                    Grid.Row="3"
+                    VerticalAlignment="Center"
+                    Content="Heslo:" />
+                <Label
+                    Grid.Row="4"
+                    VerticalAlignment="Center"
+                    Content="Role:" />
+
+
+
+
+                <Button
+                    Grid.Row="5"
+                    Grid.ColumnSpan="2"
+                    Height="50"
+                    Margin="0,20"
+                    Padding="10,5"
+                    VerticalAlignment="Top"
+                    Command="{Binding AddNewRoomCommand}"
+                    Content="Přidat"
+                    FontSize="25"
+                    Foreground="#161616" />
+            </Grid>
+
+
+
+
+
+            <Button
+                Grid.Row="0"
+                Height="50"
+                Padding="10,5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top"
+                Command="{Binding SaveCommand}"
+                Content="Uložit změny"
+                FontSize="25"
+                Foreground="#161616" />
+
+        </Grid>
+
+
+        <TextBlock
+            FontSize="20"
+            Foreground="Red"
+            Text="{Binding ErrorMessage}"
+            TextAlignment="Center" />
+
 
 
         <DataGrid
