--- a/MeetManagerPrism/Views/Admin/AdminEventTypesPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminEventTypesPage.xaml
@@ -5,10 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.Views.Admin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://prismlibrary.com/"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:prism="http://prismlibrary.com/" xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin" d:DataContext="{d:DesignInstance Type=admin:AdminEventTypesViewModel}"
+    d:DesignHeight="700"
+    d:DesignWidth="1280"
     prism:ViewModelLocator.AutoWireViewModel="True"
+    FontSize="16"
     mc:Ignorable="d">
 
 
@@ -18,22 +19,12 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="75*" />
+            <ColumnDefinition Width="70*" />
             <ColumnDefinition Width="25*" />
+            <ColumnDefinition Width="5*" />
         </Grid.ColumnDefinitions>
 
-        <Button
-            Grid.Row="1"
-            Grid.Column="1"
-            Height="50"
-            Margin="0"
-            Padding="10,5"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Command="{Binding SaveCommand}"
-            Content="Uložit změny"
-            FontSize="25"
-            Foreground="#161616" />
+
         <StackPanel>
 
 
@@ -47,50 +38,36 @@
 
         <DataGrid
             Grid.Row="1"
-            Margin="20,0"
+            Margin="0,0,0,55"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             AutoGenerateColumns="False"
             Background="#086CB4"
-            CanUserAddRows="false"
+            CanUserAddRows="False"
             FontSize="17"
             Foreground="#FFD340"
-            ItemsSource="{Binding Users, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            ItemsSource="{Binding EventTypeList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectionMode="Single"
             SelectionUnit="Cell">
             <DataGrid.Columns>
                 <DataGridTextColumn
                     MinWidth="70"
-                    Binding="{Binding Id}"
+                    Binding="{Binding  Id}"
                     Header="Id"
                     IsReadOnly="True" />
                 <DataGridTextColumn
+                    Width="180"
                     MinWidth="150"
                     Binding="{Binding Name}"
-                    Header="UserName" />
-                <DataGridTextColumn
-                    MinWidth="150"
-                    Binding="{Binding Email}"
-                    Header="Email" />
+                    Header="Název" />
+               
 
-
-                <DataGridTemplateColumn Header="Role">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox
-                                DisplayMemberPath="RoleName"
-                                ItemsSource="{Binding DataContext.RolesList, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                SelectedValue="{Binding RoleId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                SelectedValuePath="Id" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
 
                 <DataGridTemplateColumn MinWidth="80" Header="Akce">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button
-                                Command="{Binding DataContext.RemoveUserCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                Command="{Binding DataContext.RemoveEventTypeCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                 CommandParameter="{Binding}"
                                 Content="Smazat" />
                         </DataTemplate>
@@ -98,7 +75,85 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Grid
+                Grid.Row="1"
+                Margin="0,35"
+                VerticalAlignment="Bottom">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="35*" />
+                    <ColumnDefinition Width="65*" />
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition MinHeight="50" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+
+
+                <TextBlock
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    FontSize="35"
+                    Foreground="#FFBC24"
+                    Text="Přidat EventType" />
+
+                <TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    Text="{Binding NewEventType.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <Label
+                    Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Content="Název:" />
+
+                <Button
+                    Grid.Row="4"
+                    Grid.ColumnSpan="2"
+                    Height="50"
+                    Margin="0,20"
+                    Padding="10,5"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding AddNewEventTypeCommand}"
+                    Content="Přidat"
+                    FontSize="25"
+                    Foreground="#161616" />
+            </Grid>
+
+
+
+
+
+            <Button
+                Grid.Row="0"
+                Height="50"
+                Padding="10,5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top"
+                Command="{Binding SaveChangesCommand}"
+                Content="Uložit změny"
+                FontSize="25"
+                Foreground="#161616" />
+
+        </Grid>
+
+
+
+
+
+
     </Grid>
+
 
 
 </UserControl>
