--- a/MeetManagerPrism/Views/Admin/AdminEventTypesPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminEventTypesPage.xaml
@@ -2,10 +2,12 @@
     x:Class="MeetManagerPrism.Views.Admin.AdminEventTypesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.Views.Admin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://prismlibrary.com/" xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin" d:DataContext="{d:DesignInstance Type=admin:AdminEventTypesViewModel}"
+    xmlns:prism="http://prismlibrary.com/"
+    d:DataContext="{d:DesignInstance Type=admin:AdminEventTypesViewModel}"
     d:DesignHeight="700"
     d:DesignWidth="1280"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -52,7 +54,7 @@
             <DataGrid.Columns>
                 <DataGridTextColumn
                     MinWidth="70"
-                    Binding="{Binding  Id}"
+                    Binding="{Binding Id}"
                     Header="Id"
                     IsReadOnly="True" />
                 <DataGridTextColumn
@@ -60,7 +62,7 @@
                     MinWidth="150"
                     Binding="{Binding Name}"
                     Header="Název" />
-               
+
 
 
                 <DataGridTemplateColumn MinWidth="80" Header="Akce">
