--- a/MeetManagerPrism/Views/Manager/CreateEventPage.xaml
+++ b/MeetManagerPrism/Views/Manager/CreateEventPage.xaml
@@ -53,28 +53,28 @@
             <TextBox
                 Grid.Row="0"
                 Grid.Column="1"
-                HorizontalAlignment="Right"
                 MinWidth="350"
                 Margin="5"
+                HorizontalAlignment="Right"
                 MaxLength="25"
                 Text="{Binding MyEvent.Name}" />
 
             <Label Grid.Row="1" Content="Začátek:" />
             <DatePicker
-                HorizontalAlignment="Right"
                 Grid.Row="1"
                 Grid.Column="1"
                 MinWidth="350"
                 Margin="5"
+                HorizontalAlignment="Right"
                 SelectedDate="{Binding MyEvent.StartDate}" />
 
             <Label Grid.Row="2" Content="Konec:" />
             <DatePicker
-                HorizontalAlignment="Right"
                 Grid.Row="2"
                 Grid.Column="1"
                 MinWidth="350"
                 Margin="5"
+                HorizontalAlignment="Right"
                 SelectedDate="{Binding MyEvent.EndDate}" />
 
             <Label
@@ -83,11 +83,11 @@
                 Margin="0,0,15,0"
                 Content="Typ Události:" />
             <ComboBox
-                HorizontalAlignment="Right"
                 Grid.Row="3"
                 Grid.Column="1"
                 MinWidth="350"
                 Margin="5"
+                HorizontalAlignment="Right"
                 DisplayMemberPath="Name"
                 ItemsSource="{Binding EventTypeList, Mode=TwoWay}"
                 SelectedValue="{Binding MyEvent.EventTypeId, Mode=TwoWay}"
@@ -98,8 +98,8 @@
                 Grid.Row="4"
                 Grid.Column="1"
                 MinWidth="350"
-                HorizontalAlignment="Right"
                 Margin="5"
+                HorizontalAlignment="Right"
                 DisplayMemberPath="Name"
                 ItemsSource="{Binding RoomList, Mode=TwoWay}"
                 SelectedValue="{Binding MyEvent.RoomID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -111,9 +111,9 @@
                 Grid.Row="5"
                 Grid.Column="1"
                 MinWidth="350"
-                HorizontalAlignment="Right"
                 MaxHeight="100"
                 Margin="5"
+                HorizontalAlignment="Right"
                 Text="{Binding MyEvent.Description}" />
         </Grid>
 
@@ -159,9 +159,9 @@
 
 
             <TextBlock
+                Margin="10"
                 VerticalAlignment="Bottom"
                 Text="Pozvat"
-                Margin="10"
                 TextAlignment="Center" />
             <TextBlock
                 Grid.Column="2"
@@ -181,8 +181,8 @@
 
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Name}" Header="Name" />
-                    <DataGridTextColumn Binding="{Binding Email}" Header="Email" />
+                    <DataGridTextColumn Binding="{Binding User.Name}" Header="Name" />
+                    <DataGridTextColumn Binding="{Binding Status}" Header="Status" />
                 </DataGrid.Columns>
             </DataGrid>
 
@@ -201,8 +201,8 @@
 
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Name}" Header="Name" />
-                    <DataGridTextColumn Binding="{Binding Email}" Header="Email" />
+                    <DataGridTextColumn Binding="{Binding User.Name}" Header="Name" />
+                    <DataGridTextColumn Binding="{Binding Status}" Header="Status" />
                 </DataGrid.Columns>
             </DataGrid>
 
